--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_catalogo_Info
 @{
-    ViewBag.Title = "Anular catálogo de facturación";
+    ViewBag.Title = "Consultar catálogo de facturación";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,10 +8,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Anular", "CatalogoFacturacion", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "CatalogoFacturacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdCatalogo_tipo)
-
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                @if (@ViewBag.Nuevo == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "CatalogoFacturacion", new { Area = "Facturacion" }, null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Modificar == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CatalogoFacturacion", new { Area = "Facturacion", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+            <div class="col-md-1">
+                @if (@ViewBag.Anular == true)
+                {
+                    <div class="form-group">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "CatalogoFacturacion", new { Area = "Facturacion", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
@@ -69,20 +111,9 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group has-error">
-                    <label for="MotiAnula">Motivo anulación*</label>
-                    @Html.TextAreaFor(q => q.MotiAnula, new { @class = "form-control", @rows = 3 })
-                    @Html.ValidationMessageFor(q => q.MotiAnula, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
+
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","CatalogoFacturacion", new { IdCatalogo_tipo = ViewBag.IdCatalogo_tipo , Area = "Facturacion" },null)">Cancelar</a>
     </div>
 
