--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Core.Erp.Web.Helps
+@model Core.Erp.Info.Facturacion.fa_cliente_Info
 @{
     ViewBag.Title = "Consulta de clientes";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,12 +10,15 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
     <div class="row">
         <div class="col-md-12">
             <a class="btn btn-primary" href="@Url.Action("Importar","Cliente",new { Area = "Facturacion", IdEmpresa = SessionFixed.IdEmpresa },null)">Importar desde excel</a>
         </div>
     </div>
 
-    @Html.Action("GridViewPartial_cliente")
+    @Html.Action("GridViewPartial_cliente", new { Nuevo = ViewBag.Nuevo })
 
 }
