--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FormaPago/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FormaPago/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Facturacion.fa_formaPago_Info
 @{
     ViewBag.Title = "Consulta de formas de pago";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,7 +9,8 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_forma_pago")
+    @Html.Action("GridViewPartial_forma_pago", new { Nuevo = ViewBag.Nuevo })
 
 }
