--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FormaPago/_GridViewPartial_forma_pago.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FormaPago/_GridViewPartial_forma_pago.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_forma_pago";
-        settings.CallbackRouteValues = new { Controller = "FormaPago", Action = "GridViewPartial_forma_pago" };
+        settings.CallbackRouteValues = new { Controller = "FormaPago", Action = "GridViewPartial_forma_pago", Nuevo = ViewBag.Nuevo };
         settings.Width = Unit.Percentage(100);
 
         settings.KeyFieldName = "IdFormaPago";
@@ -63,21 +63,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdFormaPago = DataBinder.Eval(tc.DataItem, "IdFormaPago") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdFormaPago = DataBinder.Eval(tc.DataItem, "IdFormaPago") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdFormaPago = DataBinder.Eval(tc.DataItem, "IdFormaPago") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -96,6 +93,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
