--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/MotivoTraslado/_GridViewPartial_Motivo_traslado.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/MotivoTraslado/_GridViewPartial_Motivo_traslado.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_Motivo_traslado";
-        settings.CallbackRouteValues = new { Controller = "MotivoTraslado", Action = "GridViewPartial_Motivo_traslado" };
+        settings.CallbackRouteValues = new { Controller = "MotivoTraslado", Action = "GridViewPartial_Motivo_traslado", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdMotivoTraslado";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -60,21 +60,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMotivoTraslado = DataBinder.Eval(tc.DataItem, "IdMotivoTraslado") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMotivoTraslado = DataBinder.Eval(tc.DataItem, "IdMotivoTraslado") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdMotivoTraslado = DataBinder.Eval(tc.DataItem, "IdMotivoTraslado") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
-                );
+                if (ViewBag.Nuevo==true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -93,6 +90,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
