--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NivelDescuento/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NivelDescuento/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Facturacion.fa_NivelDescuento_Info
 @{
     ViewBag.Title = "Consulta de niveles de descuento";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,7 +9,9 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_nivel_dscto_fa")
+    @Html.Action("GridViewPartial_nivel_dscto_fa", new { Nuevo = ViewBag.Nuevo })
 
 }
