--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
-
 @{
     ViewBag.Title = "Consulta de punto de venta";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +9,8 @@
 }
 @using (Html.BeginForm("Index", "PuntoVenta", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
    <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_puntoventa", new { IdSucursal = Model.IdSucursal, CodDocumentoTipo = Model.CodDocumentoTipo })
+            @Html.Action("GridViewPartial_puntoventa", new { Nuevo = ViewBag.Nuevo } )
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
