--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_puntoventa";
-        settings.CallbackRouteValues = new { Controller = "PuntoVenta", Action = "GridViewPartial_puntoventa", IdEmpresa = ViewBag.IdEmpresa, IdSucursal = ViewBag.IdSucursal, CodDocumentoTipo = ViewBag.CodDocumentoTipo };
+        settings.CallbackRouteValues = new { Controller = "PuntoVenta", Action = "GridViewPartial_puntoventa", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdPuntoVta";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -61,22 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "estado")) == true)
-                {
-
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta") }) + "&nbsp;" +
-                            Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta")},
-                                new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                        );
-                }
-
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdPuntoVta = DataBinder.Eval(tc.DataItem, "IdPuntoVta") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -107,6 +103,7 @@
 
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
