--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Facturacion.fa_Vendedor_Info
 @{
     ViewBag.Title = "consulta de vendedores";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -9,9 +9,10 @@
 }
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-
-    @Html.Action("GridViewPartial_vendedor")
+    @Html.Action("GridViewPartial_vendedor", new { Nuevo = ViewBag.Nuevo })
 
 
 }
