--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierrePorModuloPorSucursal/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/CierrePorModuloPorSucursal/Consultar.cshtml
@@ -37,7 +37,7 @@
                 @if (@ViewBag.Nuevo == true)
                 {
                     <div class="form-group">
-                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","ComprobanteContable",new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa },null)">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","CierrePorModuloPorSucursal",new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa },null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
@@ -47,7 +47,7 @@
                 @if (@ViewBag.Modificar == true)
                 {
                     <div class="form-group">
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ComprobanteContable", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdTipoCbte = Model.IdTipoCbte, IdCbteCble = Model.IdCbteCble }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CierrePorModuloPorSucursal", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdCierre = Model.IdCierre}, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -57,7 +57,7 @@
                 @if (@ViewBag.Anular == true)
                 {
                     <div class="form-group">
-                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "ComprobanteContable", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdTipoCbte = Model.IdTipoCbte, IdCbteCble = Model.IdCbteCble }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Anular", "CierrePorModuloPorSucursal", new { Area = "Contabilidad", IdEmpresa = Model.IdEmpresa, IdCierre = Model.IdCierre}, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
