--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Turno/Anular.cshtml
@@ -129,7 +129,7 @@
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Cargo",new { Area = "RRHH" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Turno",new { Area = "RRHH" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
