--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_marcaciones_x_empleado_Info
 @{
-    ViewBag.Title = "Nueva carga de novedades";
+    ViewBag.Title = "Carga de marcaciones";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
