--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionMarcaciones/Nuevo.cshtml
@@ -75,7 +75,7 @@
     <div class="col-md-12">
         <div class="col-md-12">
             <div class="form-group">
-                <label for="detalle">Detalle de la novedad</label>
+                <label for="detalle">Marcaciones a subir</label>
                 @Html.Action("GridViewPartial_importacion_marcaciones_det")
                 @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
             </div>
